# calibration

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.old  Rakefile  TODO.txt  align_streams.cpp  aligned_streams_apriltag_extract.cpp  april_tag_board_generator.cpp  april_tag_board_generator.h  april_tag_detection_set.cpp  april_tag_detection_set.h  board.cpp  board.h  calibration.cpp  calibration_april.cpp  calibration_artificial.cpp  conanfile.py  detection.cpp  detection.h  extract_frame.cpp  extract_static_frames.cpp  fips  fips.yml  script.sh  synchronizer.cpp  synchronizer.h  trendnet_time_code.cpp  video.cpp  video.h  watch_for_change.cpp
cmake/: FindAplCam.cmake  FindApriltags.cmake  FindEigen.cmake  FindGSL.cmake
data/boards/: april_letter_1.5in.yml  april_poster_2in.yml  big_apriltags_65mm.yml  chess64.yml  chess711.yml  chess75.yml  readme.txt
data/boards/11x34in-tag-mosaic-2in/: left.xcf  right.xcf
data/cameras/: haptic4_sim.yml
include/: apriltag_detector.h  background_segmenter.h  bits_to_hex.h  board.h  calibration_db.h  calibration_opts.h  calibration_opts_common.h  calibration_permutations.h  calibration_result.h  calibration_serializer.h  calibrator.h  camera_factory.h  chess_board_generator.h  composite_canvas.h  dark_channel.h  detection.h  detection_base.h  detection_db.h  detection_io.h  detection_set.h  detector.h  disparity_db.h  distortion_angular_polynomial.h  distortion_fisheye.h  distortion_model.h  distortion_radial_polynomial.h  distortion_stereo.h  feature_tracker.h  file_utils.h  gmm.h  gmm.impl.hpp  graphcut.h  image.h  image_detections.h  image_pair.h  input_queue.h  my_undistort.h  permutation_helpers.h  random.h  rm_graphcut.h  (+14 more)
include/video_splitters/: video_splitter_opts.h  video_splitters.h
lib/: CMakeLists.txt  angular_polynomial.cpp  april_tag_detection_set.cpp  background_segmenter.cpp  bits_to_hex.cpp  board.cpp  calibration_db.cpp  calibration_opts.cpp  calibration_permutations.cpp  calibrator.cpp  camera_factory.cpp  camera_model.cpp  chess_board_generator.cpp  count_bits.h  dark_channel.cpp  detection.cpp  detection_db.cpp  detection_io.cpp  disparity_db.cpp  distortion_model.cpp  distortion_stereo.cpp  feature_tracker.cpp  file_utils.cpp  fisheye.cpp  fourier_chunk.cpp  gcgraph.hpp  gmm.cpp  graphcut.cpp  image.cpp  input_queue.cpp  my_undistort.cpp  pinhole_camera.cpp  radial_polynomial.cpp  rm_graphcut.cpp  sonar_calibration_solver.cpp  sonar_detections.cpp  sonar_image_warper.cpp  sonar_pose.cpp  stereo_calibration.cpp  stereo_pair.cpp  (+4 more)
lib/video_splitters/: video_splitter_opts.cpp
results/: Rakefile
scripts/: Rakefile  capture_haptic1.sh  capture_haptic12.sh  capture_haptic2.sh  capture_haptic3.sh  capture_haptic34.sh  capture_haptic4.sh
test/data/boards/: april_poster_45in.yml
tools/: CMakeLists.txt  align_streams.cpp  aligned_streams_apriltag_extract.cpp  annotate_sphere_locations.cpp  build_detection_db.cpp  build_stereo_detection_db.cpp  cal.cpp  cal_impl.cpp  cal_impl.h  calculate_calibration_errors.cpp  calibration.cpp  calibration_april.cpp  calibration_db_dump.cpp  calibration_db_reproject.cpp  calibration_reproject.cpp  calibration_video.cpp  composite_video.cpp  db_stereo_calibration.cpp  deinterlace.cpp  extract.cpp  extract_background_image.cpp  image_processor.cpp  simulate_detection_db.cpp  sonar_calibration.cpp  stereo_calibration.cpp  stereo_processor.cpp  test_video.cpp  validate_sonar.cpp  video_calibration.cpp  video_calibration_permutations.cpp  video_calibration_permutations_new.cpp  video_calibration_random50_permutations.cpp  visualize_img.cpp  visualize_pc.cpp  watch_for_change.cpp
tools/old/: annotate_sphere_locations.cpp  build_stereo_detection_db.cpp  cal_impl.cpp  calibration_artificial.cpp  deinterlace.cpp  extract_background_image.cpp  stereo_calibration.cpp  trendnet_time_code_test.cpp  validate_sonar.cpp  visualize_pc.cpp
tools/subcommands/: cal.cpp  cal.h  extract.cpp  extract.h
